# sleipnir

./: .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  bench_demo.cc
cmake/: googletest.CMakeLists.txt.in  sleipnir-lib.CMakeLists.txt.in
docs/: coding-style.md
include/: sleipnir_macros.h  sleipnir_math.h
include/internal/: sleipnir_cleanup_heap.h  sleipnir_constants.h  sleipnir_heap.h  sleipnir_internal_heap.h  sleipnir_memory.h  sleipnir_mm.h  sleipnir_obj_header.h  sleipnir_pageinfo.h  sleipnir_persist.h  sleipnir_private_heap.h  sleipnir_sanity_check.h  sleipnir_thread.h  sleipnir_timeinfo.h  sleipnir_word_info.h
src/: sleipnir.c  sleipnir_cleanup_heap.c  sleipnir_dlmalloc.c  sleipnir_heap.c  sleipnir_internal_heap.c  sleipnir_linux_mm.c  sleipnir_memory.c  sleipnir_obj_header.c  sleipnir_persist.c  sleipnir_private_heap.c  sleipnir_sanity_check.c  sleipnir_thread.c  sleipnir_timeinfo.c
src/utils/: sleipnir_demo.c
test/: CMakeLists.txt  sleipnir_test.cc
